--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg header navbar-light sticky-top">
+    <nav class="navbar navbar-expand-lg header animate__animated  navbar-light sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="img/icon.png" class="header-icon">
@@ -548,6 +548,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
     </script>
+    <script src="./node_modules/waypoints/lib/noframework.waypoints.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
