--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="container" id="home">
         <div class="row align-items-center justify-content-center" style="min-height: 80vh;">
             <div class="col-12 col-lg-7 col-xl-5">
-                <div class="mb-5">
+                <div class="mb-5 content">
                     <h1 class="fw-bold text-primary">Tasty Food</h1>
                     <p class="text-black-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium
                         ducimus in tempore placeat
@@ -61,7 +61,7 @@
             </div>
             <div class="col-12 d-none d-xl-block col-xl-2"></div>
             <div class="col-8 col-lg-5 col-xl-5">
-                <div>
+                <div class="content">
                     <img src="img/home.png" class="img-fluid" alt="">
                 </div>
             </div>
@@ -73,12 +73,12 @@
                 <div class="container">
                     <div class="row justify-content-center align-items-center py-5 mt-5">
                         <div class="col-12 col-lg-4">
-                            <div class="mb-5">
+                            <div class="mb-5 content">
                                 <img src="img/about.jpg" class="shadow img-fluid rounded">
                             </div>
                         </div>
                         <div class="col-12 col-lg-4">
-                            <div class="mb-5">
+                            <div class="mb-5 content">
                                 <p class="text-primary fw-bold">About</p>
                                 <h3 class="fw-bold">We cook the best <br> tasty food</h3>
                                 <p class="text-black-50">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error
@@ -100,7 +100,7 @@
                     <div class="row justify-content-center align-items-center my-5">
                         <div class="col-12">
                             <div class="mb-5">
-                                <div class="text-center">
+                                <div class="text-center content">
                                     <p class="text-primary fw-bold">Services</p>
                                     <h3 class="fw-bold">Our amazing services</h3>
                                 </div>
@@ -109,7 +109,7 @@
                     </div>
                     <div class="row justify-content-center mt-5">
                         <div class="col-12 col-lg-4 col-xl-3">
-                            <div class="text-center mb-5">
+                            <div class="text-center mb-5 content">
                                 <svg class="services-svg" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M45.3205 21.5702L44.6357 19.3163C43.7659 16.756 40.9852 15.3857 38.4249
         16.2556C36.9847 16.7449 35.8536 17.876 35.3643 19.3163L34.6795 21.5702C34.1032
@@ -177,7 +177,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-lg-4 col-xl-3">
-                            <div class="text-center mb-5">
+                            <div class="text-center mb-5 content">
                                 <svg class="services-svg" xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0)">
                                         <path d="M55.82 22.0395C55.5475 21.5164 54.9027 21.3132 54.3795 21.5855L54.3794 
@@ -350,7 +350,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-lg-4 col-xl-3">
-                            <div class="text-center mb-5">
+                            <div class="text-center mb-5 content">
                                 <svg class="services-svg" xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0)">
                                         <path d="M19.1978 49.6016C17.4308 49.6016 15.9981 51.0342 15.9981 52.8012C15.9981 54.5682 17.4308 
@@ -418,14 +418,14 @@
         <div class="row py-5 justify-content-center">
             <div class="col-12">
                 <div class="mb-5">
-                    <div class="text-center">
+                    <div class="text-center content">
                         <p class="text-primary fw-bold">Special</p>
                         <h3 class="fw-bold">Menu of the week</h3>
                     </div>
                 </div>
             </div>
             <div class="col-6 col-lg-3 col-xl-2">
-                <div class="card mb-5">
+                <div class="card mb-5 content">
                     <img src="img/plate1.png" class="card-img-top w-75 mx-auto mt-3" alt="">
                     <div class="card-body">
                         <p class="card-title fw-bold mb-0">Barbecue Salad</p>
@@ -438,7 +438,7 @@
                 </div>
             </div>
             <div class="col-6 col-lg-3 col-xl-2">
-                <div class="card mb-5">
+                <div class="card mb-5 content">
                     <img src="img/plate2.png" class="card-img-top w-75 mx-auto mt-3" alt="">
                     <div class="card-body">
                         <p class="card-title fw-bold mb-0">Salad With Fish</p>
@@ -451,7 +451,7 @@
                 </div>
             </div>
             <div class="col-6 col-lg-3 col-xl-2">
-                <div class="card mb-5">
+                <div class="card mb-5 content">
                     <img src="img/plate3.png" class="card-img-top w-75 mx-auto mt-3" alt="">
                     <div class="card-body">
                         <p class="card-title fw-bold mb-0">Spinach Salad</p>
@@ -466,12 +466,12 @@
         </div>
         <div class="row justify-content-center align-items-center mt-5 pt-5">
             <div class="col-12 col-lg-4">
-                <div class="mb-5">
+                <div class="mb-5 content">
                     <img src="img/movil-app.png" class="img-fluid">
                 </div>
             </div>
             <div class="col-12 col-lg-4">
-                <div class="mb-5">
+                <div class="mb-5 content">
                     <p class="text-primary fw-bold">Application</p>
                     <h3 class="fw-bold">App is availabel</h3>
                     <p class="text-black-50">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error
@@ -491,7 +491,7 @@
             <div class="col-12 col-lg-8 col-xl-6">
                 <div class="row justify-content-center align-items-end mt-5">
                     <div class="col-12 col-lg-8">
-                        <div class="">
+                        <div class="content">
                             <p class="text-primary fw-bold">Let's Talk</p>
                             <h3 class="fw-bold my-4">Contact Us</h3>
                             <p class="text-black-50 mb-0">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -502,7 +502,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-lg-4">
-                        <a href="#" class="btn btn-primary btn-lg float-end">Contact Us Now</a>
+                        <a href="#" class="btn btn-primary btn-lg float-end content">Contact Us Now</a>
                     </div>
                 </div>
                 <div class="row">
@@ -510,11 +510,13 @@
                         <hr>
                     </div>
                     <div class="col-6 col-lg-3">
-                        <p class="text-primary fw-bold mb-0">Tasty Food</p>
-                        <small>Restaurant</small>
+                        <div class="content">
+                            <p class="text-primary fw-bold mb-0">Tasty Food</p>
+                            <small>Restaurant</small>
+                        </div>
                     </div>
                     <div class="col-6 col-lg-3">
-                        <div class="mb-5">
+                        <div class="mb-5 content">
                             <p class="fw-bold">Services</p>
                             <a href="#" class="text-decoration-none text-black-50">Delivery</a><br>
                             <a href="#" class="text-decoration-none text-black-50">Pricing</a><br>
@@ -523,7 +525,7 @@
                         </div>
                     </div>
                     <div class="col-6 col-lg-3">
-                        <div class="mb-5">
+                        <div class="mb-5 content">
                             <p class="fw-bold">Information</p>
                             <a href="#" class="text-decoration-none text-black-50">Event</a><br>
                             <a href="#" class="text-decoration-none text-black-50">Contact Us</a><br>
@@ -532,7 +534,7 @@
                         </div>
                     </div>
                     <div class="col-6 col-lg-3">
-                        <div class="mb-5">
+                        <div class="mb-5 content">
                             <p class="fw-bold">Address</p>
                             <a href="#" class="text-decoration-none text-black-50">Yangon,SOK</a><br>
                             <a href="#" class="text-decoration-none text-black-50">No 999,GGG Street</a><br>
@@ -544,11 +546,18 @@
             </div>
         </div>
     </footer>
-    <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    <a href="#home" class="btn btn-primary btn-sm d-none animate__animated animate__slideInUp scroll-to-top-btn"><i
+            class="fas fa-angle-up"></i></a>
+    <!-- script section  -->
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="node_modules/waypoints/lib/noframework.waypoints.min.js"></script>
+    <script src="node_modules/scrollreveal/dist/scrollreveal.min.js"></script>
+
+    <!-- cdn  -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
-    </script>
-    <script src="./node_modules/waypoints/lib/noframework.waypoints.min.js"></script>
+    </script> -->
+    <!-- <script src="https://unpkg.com/scrollreveal"></script> -->
     <script src="js/app.js"></script>
 </body>
 
